[gd_scene load_steps=13 format=3 uid="uid://b773mu3lbdugd"]

[ext_resource type="PackedScene" uid="uid://deev41c70twl5" path="res://scenes/main_menu/background.tscn" id="1_0ebjn"]
[ext_resource type="Script" uid="uid://id1stvlhb8jb" path="res://scripts/ui/main_menu.gd" id="1_ob46e"]
[ext_resource type="FontFile" uid="uid://e8o0dvapgj8v" path="res://assets/fonts/ComicNeueSansID.ttf" id="2_ob46e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ebjn"]
bg_color = Color(0.490196, 0.917647, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ob46e"]
bg_color = Color(0.168627, 0.690196, 0.839216, 1)
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uqeha"]
bg_color = Color(0.298039, 0.811765, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wem23"]
bg_color = Color(0.490196, 0.917647, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ovsr"]
bg_color = Color(0.168627, 0.690196, 0.839216, 1)
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5seab"]
bg_color = Color(0.298039, 0.811765, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xg86"]
bg_color = Color(0.490196, 0.917647, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thkx5"]
bg_color = Color(0.168627, 0.690196, 0.839216, 1)
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2yjq"]
bg_color = Color(0.298039, 0.811765, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_offset = Vector2(3, 3)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -19.0
offset_top = -103.0
offset_right = 541.0
offset_bottom = 252.0
script = ExtResource("1_ob46e")

[node name="Background" parent="." instance=ExtResource("1_0ebjn")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 200)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.063
anchor_top = 0.35
anchor_right = 0.063
anchor_bottom = 0.355
offset_left = 145.72
offset_top = -23.25
offset_right = 978.72
offset_bottom = 630.975
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 36
text = "Menu Inicial"
horizontal_alignment = 1

[node name="Button_Jogar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_0ebjn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ob46e")
theme_override_styles/normal = SubResource("StyleBoxFlat_uqeha")
text = "Jogar"

[node name="Button_Ranking" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_wem23")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3ovsr")
theme_override_styles/normal = SubResource("StyleBoxFlat_5seab")
text = "Ranking
"

[node name="Button_Creditos" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_wem23")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3ovsr")
theme_override_styles/normal = SubResource("StyleBoxFlat_5seab")
text = "Créditos"

[node name="Button_Sair" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_4xg86")
theme_override_styles/pressed = SubResource("StyleBoxFlat_thkx5")
theme_override_styles/normal = SubResource("StyleBoxFlat_x2yjq")
text = "Sair"

[node name="Button_Musica" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_uqeha")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_uqeha")
theme_override_styles/hover = SubResource("StyleBoxFlat_uqeha")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uqeha")
theme_override_styles/normal = SubResource("StyleBoxFlat_uqeha")
text = "Música"
alignment = 1

[connection signal="pressed" from="VBoxContainer/Button_Ranking" to="." method="_on_button_ranking_pressed"]
[connection signal="toggled" from="VBoxContainer/Button_Musica" to="." method="_on_button_musica_toggled"]
